--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -61,7 +61,8 @@
                 <th scope="col">Id</th>
                 <th scope="col">Text</th>
                 <th scope="col">Hodnota</th>
-                <th scope="col">Obrázek</th>
+                <th scope="col">Obrázek url</th>
+                <th scope="col">Obrázek soubor</th>
                 <th scope="col">Akce</th>
             </tr>
             </thead>
@@ -71,9 +72,10 @@
                 <td th:text="${hint.text}">text</td>
                 <td th:text="${hint.value}">value</td>
                 <td>
-                    <div th:if="${hint.imageUrl} != '' and ${hint.image} != null">&#10004;&#10004;</div>
-                    <div th:if="${hint.imageUrl} == '' and ${hint.image} != null">&nbsp;&nbsp;&nbsp;&nbsp;&#10004;</div>
-                    <div th:if="${hint.imageUrl} != '' and ${hint.image} == null">&#10004;</div>
+                    <div th:unless="${hint.imageUrl} == ''">&#10004;</div>
+                </td>
+                <td>
+                    <div th:unless="${hint.image} == ''">&#10004;</div>
                 </td>
                 <td>
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Akce
