--- a/src/main/resources/templates/hint/detail.html
+++ b/src/main/resources/templates/hint/detail.html
@@ -18,8 +18,8 @@
                     <input id="cypherId" type="number" class="form-control" th:field="*{cypher.cypherId}" readonly/>
                 </div>
                 <div class="form-group">
-                    <label for="text">Text</label>
-                    <textarea id="text" class="form-control" th:field="*{text}"/>
+                    <label for="text" class="input-value-required">Text</label>
+                    <textarea id="text" class="form-control" th:field="*{text}" required/>
                     <p class="error" th:if="${#fields.hasErrors('text')}" th:errors="*{text}">Text error.</p>
                 </div>
                 <div class="form-group">
@@ -36,8 +36,8 @@
                     <p class="error" th:if="${#fields.hasErrors('image')}" th:errors="*{image}">Image error.</p>
                 </div>
                 <div class="form-group">
-                    <label for="value">Hodnota</label>
-                    <input id="value" class="form-control" type="number" th:field="*{value}"/>
+                    <label for="value" class="input-value-required">Hodnota</label>
+                    <input id="value" class="form-control" type="number" th:field="*{value}" required/>
                     <p class="error" th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value error.</p>
                 </div>
                 <button type="submit" class="btn btn-primary">Uložit</button>
@@ -55,4 +55,3 @@
 <div th:insert="fragments/externalScripts :: externalScripts"></div>
 </body>
 </html>
-
