--- a/src/main/resources/templates/organizermanagement/form.html
+++ b/src/main/resources/templates/organizermanagement/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="cs" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Organizátor')">
+<head th:replace="fragments/head :: head(#{admin.organizers.page-title})">
 </head>
 
 <body>
@@ -8,7 +8,10 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h2><span th:text="${heading}">Nadpis</span></h2>
+            <h2>
+                <span th:if="${action == 'update'}" th:utext="#{admin.organizers.form.edit-organizer}">Upravit organizátora</span>
+                <span th:if="${action == 'add'}" th:utext="#{admin.organizers.form.add-organizer}">Nový organizátor</span>
+            </h2>
         </div>
     </div>
     <div class="row">
@@ -16,33 +19,32 @@
             <form action="#" th:object="${command}" method="post">
                 <input type="hidden" th:field="*{userId}"/>
                 <div class="form-group">
-                    <label for="username" class="input-value-required">Jméno</label>
+                    <label for="username" class="input-value-required" th:utext="#{admin.organizers.common.name}">Jméno</label>
                     <input id="username" class="form-control" th:field="*{username}" required/>
                     <p class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name error.</p>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="input-value-required">Heslo</label>
+                    <label for="password" class="input-value-required" th:utext="#{label.password}">Heslo</label>
                     <input id="password" class="form-control" th:field="*{password}" required/>
                 </div>
                 <div class="form-group">
-                    <label for="cyphers">Přiřazení šifry</label>
+                    <label for="cyphers" th:utext="#{admin.organizers.form.assign-new-cyphers}">Přiřadit šifry</label>
                     <select id="cyphers" class="form-control" multiple="multiple" th:field="*{cyphers}">
-                        <option th:value="null"> Bez Šifry
-                        </option>
+                        <option th:value="null" th:utext="#{admin.organizers.form.no-cyphers}">Bez Šifry</option>
                         <option th:each="c : ${cyphers}" th:value="${c.cypherId}" th:text="${c.name}">
                         </option>
                     </select>
                 </div>
                 <div class="form-group" th:if="${action == 'update'}">
-                    <label> Přiřazené šifry:</label>
+                    <span th:utext="#{admin.organizers.common.assigned-cyphers}">Přiřazené šifry:</span>:
                     <th:block th:if="${not #lists.isEmpty(command.cyphers)}"
                               th:each="c, iterStat : ${command.cyphers}"
                               th:text="!${iterStat.last} ? ${c.name} + ', ' : ${c.name}">
                     </th:block>
-                    <th:block th:if="${#lists.isEmpty(command.cyphers)}" th:text="'Organizátor nemá přiřazeny žádné šifry.'">
+                    <th:block th:if="${#lists.isEmpty(command.cyphers)}" th:utext="#{admin.organizers.form.no-cyphers-assigned}">
                     </th:block>
                 </div>
-                <button type="submit" class="btn btn-primary">Uložit</button>
+                <button type="submit" class="btn btn-primary" th:utext="#{label.save}">Uložit</button>
             </form>
         </div>
         <div class="col-sm-6">
