--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="cs" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Šifry')">
+<head th:replace="fragments/head :: head(#{admin.cyphers.page-title})">
 </head>
 
 <body>
 <div th:insert="fragments/header :: header(cypher)"></div>
 <div class="container">
-    <h2>Šifry</h2>
+    <h2 th:utext="#{admin.cyphers.list.header}">Šifry</h2>
     <div class="table-responsive">
         <table class="table">
             <thead class="thead-light">
             <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Jméno</th>
-                <th scope="col">Pořadí</th>
-                <th scope="col">Souřadnice</th>
-                <th scope="col">Popis místa</th>
-                <th scope="col">Odpověď</th>
-                <th scope="col">Falešná odpověď</th>
-                <th scope="col">Bonus</th>
-                <th scope="col">Organizátor</th>
-                <th scope="col">Akce</th>
+                <th scope="col" th:utext="#{label.id}">Id</th>
+                <th scope="col" th:utext="#{label.name}">Jméno</th>
+                <th scope="col" th:utext="#{admin.cyphers.common.order}">Pořadí</th>
+                <th scope="col" th:utext="#{admin.cyphers.common.coordinates}">Souřadnice</th>
+                <th scope="col" th:utext="#{admin.cyphers.common.description}">Popis místa</th>
+                <th scope="col" th:utext="#{admin.cyphers.common.answer}">Odpověď</th>
+                <th scope="col" th:utext="#{admin.cyphers.common.easter-egg-answer}">Falešná odpověď</th>
+                <th scope="col" th:utext="#{admin.cyphers.common.bonus-info}">Bonus</th>
+                <th scope="col" th:utext="#{admin.cyphers.common.organizer}">Organizátor</th>
+                <th scope="col" th:utext="#{label.actions}">Akce</th>
             </tr>
             <tr th:if="${cyphers.empty}">
-                <td colspan="9"><p> V systému nejsou šifry</p></td>
+                <td colspan="9"><p th:utext="#{admin.cyphers.list.msg-empty}">V systému nejsou šifry</p></td>
             </tr>
             </thead>
             <tbody>
@@ -43,24 +43,25 @@
                     </th:block>
                 </td>
                 <td>
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Akce
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        <span th:utext="#{label.actions}">Akce</span>
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a href="#" th:href="@{/admin/hint(cypherId=${cypher.cypherId})}" class="btn">Detail</a></li>
-                        <li><a href="#" th:href="@{/admin/cypher/update/{cypherId}(cypherId=${cypher.cypherId})}" class="btn">Upravit</a></li>
+                        <li><a href="#" th:href="@{/admin/hint(cypherId=${cypher.cypherId})}" class="btn" th:utext="#{label.detail}">Detail</a></li>
+                        <li><a href="#" th:href="@{/admin/cypher/update/{cypherId}(cypherId=${cypher.cypherId})}" class="btn" th:utext="#{label.edit}">Upravit</a></li>
                         <li>
-                            <a th:if="${cypher.mapAddress != '' && cypher.mapAddress != null}" href="#" th:href="@{${cypher.mapAddress}}" target="_blank" class="btn">Mapa</a>
+                            <a th:if="${cypher.mapAddress != '' && cypher.mapAddress != null}" href="#" th:href="@{${cypher.mapAddress}}" target="_blank" class="btn"  th:utext="#{label.map}">Mapa</a>
                             <span th:if="${cypher.mapAddress == '' || cypher.mapAddress == null}" class="btn text-muted">Mapa</span>
                         </li>
-                        <li><a href="#" th:href="@{/admin/cypher/delete/{cypherId}(cypherId=${cypher.cypherId})}" class="btn">Smazat</a></li>
+                        <li><a href="#" th:href="@{/admin/cypher/delete/{cypherId}(cypherId=${cypher.cypherId})}" class="btn" th:utext="#{label.delete}">Smazat</a></li>
                     </ul>
                 </td>
             </tr>
 
             <tr>
                 <td colspan="9">
-                    <a href="#" class="btn btn-primary" th:href="@{/admin/cypher/add}">Přidat</a>
+                    <a href="#" class="btn btn-primary" th:href="@{/admin/cypher/add}" th:utext="#{label.new}">Přidat</a>
                 </td>
 
             </tr>
