--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -114,7 +114,7 @@
         <th:block th:if="${status == 'PENDING'}">
             <div class="row last">
                 <div class="col-sm-12">
-                    <form onsubmit="return confirm(#{label.client.cypherdetail.giveupconfirm})" th:action="|/cypher/giveUp/${cypher.cypherId}|" method="post">
+                    <form th:attr="onclick='return confirm(\'' + #{label.client.cypherdetail.giveupconfirm} + '\');'" th:action="|/cypher/giveUp/${cypher.cypherId}|" method="post">
                         <button class="btn btn-secondary btn-skip" type="submit" onclick="" th:utext="#{label.client.cypherdetail.giveup}">Vzdát šifru</button>
                     </form>
                 </div>
