--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="cs" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Týmy')">
+<head th:replace="fragments/head :: head(#{admin.teams.page-title})">
 </head>
 <body>
 <div th:insert="fragments/header :: header(team)"></div>
 <div class="container">
     <div class="row">
         <div class="col-sm-6">
-            <h2>Tým</h2>
+            <h2 th:utext="#{admin.teams.main.header}">Tým</h2>
             <form action="#" th:action="${action}" th:object="${teamFormDto}" method="post">
                 <div class="form-group">
-                    <label for="name" class="input-value-required">Jméno</label>
+                    <label for="name" class="input-value-required" th:utext="#{admin.teams.common.team-name}">Jméno</label>
                     <input id="name" class="form-control" type="text" th:field="*{name}" required/>
                     <p class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Chyba - Jméno
                     </p>
                 </div>
                 <div class="form-group">
-                    <label for="numberOfMembers" class="input-value-required">Počet členů</label>
+                    <label for="numberOfMembers" class="input-value-required" th:utext="#{admin.teams.common.num-of-members}">Počet členů</label>
                     <input id="numberOfMembers" class="form-control" type="number" th:field="*{numOfMembers}" required/>
                     <p class="error" th:if="${#fields.hasErrors('numOfMembers')}" th:errors="*{numOfMembers}">Chyba - Počet členů
                     </p>
                 </div>
-                <input type="submit" class="btn btn-primary" th:value="${action == 'admin/team/add' ? 'Nový' : 'Uložit'}"/>
+                <input type="submit" class="btn btn-primary" th:value="#{admin.teams.main.new}" th:if="${action == '/admin/team/add'}" />
+                <input type="submit" class="btn btn-primary" th:value="#{label.save}" th:unless="${action == '/admin/team/add'}" />
             </form>
         </div>
     </div>
 
     <div class="container">
         <div class="col-sm-12">
-            <h2>Týmy</h2>
+            <h2 th:utext="#{admin.teams.page-title}">Týmy</h2>
             <div class="table-responsive">
                 <table class="table">
                     <thead class="thead-light">
                         <tr>
-                            <th scope="col">Id</th>
-                            <th scope="col">Jméno týmu</th>
-                            <th scope="col">Uživatelské jméno</th>
-                            <th scope="col">Počet členů</th>
-                            <th scope="col">PIN</th>
-                            <th scope="col">Akce</th>
+                            <th scope="col" th:utext="#{label.id}">Id</th>
+                            <th scope="col" th:utext="#{admin.teams.common.team-name}">Jméno týmu</th>
+                            <th scope="col" th:utext="#{label.login.username}">Uživatelské jméno</th>
+                            <th scope="col" th:utext="#{admin.teams.common.num-of-members}">Počet členů</th>
+                            <th scope="col" th:utext="#{admin.teams.common.pin}">PIN</th>
+                            <th scope="col" th:utext="#{label.actions}">Akce</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr th:if="${teams.empty}">
-                            <td colspan="5"><p> V systému nejsou týmy</p></td>
+                            <td colspan="5"><p th:utext="#{admin.teams.main.msg-empty}">V systému nejsou týmy</p></td>
                         </tr>
                         <th:block th:each="team : ${teams}">
                             <tr>
@@ -53,12 +54,12 @@
                                 <td th:text="${team.numOfMembers}">8</td>
                                 <td th:text="${team.pin}">9876</td>
                                 <td>
-                                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Akce
+                                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" th:utext="#{label.actions}">Akce
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#" th:href="@{/admin/team/update/{teamId}(teamId=${team.teamId})}" class="btn">Upravit</a></li>
-                                        <li><a href="#" th:href="@{/admin/team/delete/{teamId}(teamId=${team.teamId})}" class="btn">Smazat</a></li>
+                                        <li><a href="#" th:href="@{/admin/team/update/{teamId}(teamId=${team.teamId})}" class="btn" th:utext="#{label.edit}">Upravit</a></li>
+                                        <li><a href="#" th:href="@{/admin/team/delete/{teamId}(teamId=${team.teamId})}" class="btn" th:utext="#{label.delete}">Smazat</a></li>
                                     </ul>
                                 </td>
                             </tr>
