--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -19,8 +19,8 @@
                         <span th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
                         <span th:text="${hintTaken.hint.text}"></span>
                     </p>
-                    <p th:if="${!#strings.isEmpty(hintTaken.hint.imageUrl)}">
-                        <img class="img-fluid hint-image" alt="Obrázek nápovědy" src="" th:src="@{${hintTaken.hint.imageUrl}}" />
+                    <p th:if="${hintTaken.hint.image != null}">
+                        <img class="img-fluid hint-image" alt="Obrázek nápovědy" src="" th:src="@{${hintTaken.hint.image.imageUrl}}" />
                     </p>
                     <a href="#" class="btn btn-sm btn-flat btn-remove"
                        th:onclick="return confirm('Opravdu odebrat nápovědu?')"
