Martin comments reaction

--- a/src/main/resources/templates/hint/detail.html
+++ b/src/main/resources/templates/hint/detail.html
@@ -73,6 +73,10 @@
             $("#imageFile").focus();
         }
     });
+    $("#none").click(function() {
+        $("#imageFile").prop("required", false);
+        $("#imageUrl").prop("required", false);
+    });
 </script>
 
 </body>
