odstraneno tlacitko zpet ve finalplace detailu

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -33,7 +33,7 @@
                             </div>
                         </form>
                         <div th:if="${finalViewAllowed}">
-                            <a class="btn btn-primary" th:href="@{/finalplace}" target="_blank"
+                            <a class="btn btn-primary" th:href="@{/finalplace}"
                                role="button" th:utext="#{label.client.cypherdetail.finalplacedetail}">Detail vyhlášení výsledků</a>
                         </div>
                     </th:block>
