--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -46,7 +46,7 @@
             </div>
         </div>
     </div>
-    <a th:if="${finalViewAllowed}" th:href="@{/finalplace}" id="footer" target="_blank">
+    <a th:if="${finalViewAllowed}" th:href="@{/finalplace}" id="footer">
         <div id="final-place">
             <div class="container">
                 <div class="row align-items-center">
