--- a/src/main/resources/templates/client/finalplace/detail.html
+++ b/src/main/resources/templates/client/finalplace/detail.html
@@ -3,6 +3,7 @@
 <head th:replace="fragments/head :: head('Místo vyhlášení')">
 </head>
 <body>
+<div th:insert="client/fragments/header :: header('', '')"></div>
 
 <div class="container">
     <div class="row">
